--- a/nvp-receive/src/main/resources/application.properties
+++ b/nvp-receive/src/main/resources/application.properties
@@ -7,3 +7,6 @@ logging.pattern.console=%d{HH:mm:ss.SSS} -%5p %-40.40logger{39} : %m%n
 spring.resources.static-locations=classpath:/webapp/static/
 #指定freemarker模板文件路径
 spring.freemarker.template-loader-path=classpath:/webapp/templates/
+
+#小I知识库的webservice地址
+webservice.addr1=http://111.202.106.147:8010/robot/ws/RobotServiceEx
