--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,11 @@
         <module>nvp-waihu</module>
         <module>nvp-receive</module>
         <module>nvp-southpower</module>
+        <module>nvp-panjianincubator</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.2.RELEASE</version>
     </parent>
-
-
 </project>
