--- a/nvp-cloudconnect/pom.xml
+++ b/nvp-cloudconnect/pom.xml
@@ -7,7 +7,7 @@
         <groupId>com.litong</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>nvp-cloudconnect</artifactId>
 </project>
