--- a/nvp-panjianincubator/pom.xml
+++ b/nvp-panjianincubator/pom.xml
@@ -9,9 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>nvp-study</artifactId>
+    <artifactId>nvp-panjianincubator</artifactId>
     <packaging>war</packaging>
-
     <dependencies>
         <!-- spring-boot -->
         <dependency>
@@ -52,20 +51,19 @@
             <!-- <plugin> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-maven-plugin</artifactId>
                 </plugin> -->
             <!-- 配置Tomcat插件 -->
+            <!-- 配置Tomcat插件 -->
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+
                 <configuration>
                     <port>8081</port>
-                    <path>/nvp-study</path>
-                    <!--tomcat7的url是/manager/text -->
-                    <!--tomcat6的URL是/manager -->
-                    <url>http://192.168.28.217:8081/manager/text</url>
-                    <username>tomcat</username>
-                    <password>tomcat</password>
+                    <!--path是部署后的url -->
+                    <path>/nvp-panjianincubator</path>
                 </configuration>
             </plugin>
         </plugins>
-    </build>
 
+    </build>
 </project>
