--- a/nvp-gzdw/pom.xml
+++ b/nvp-gzdw/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>nvp-panjianincubator</artifactId>
+    <artifactId>nvp-gzdw</artifactId>
     <packaging>war</packaging>
     <dependencies>
         <!-- spring-boot -->
@@ -36,7 +36,6 @@
             <artifactId>spring-boot-starter-tomcat</artifactId>
             <scope>provided</scope>
         </dependency>
-
 
         <!--dom4j-->
         <dependency>
@@ -66,7 +65,21 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
-        </plugins>
+            <!-- 配置Tomcat插件 -->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
 
+                <configuration>
+                    <port>8081</port>
+                    <path>/nvp-gzdw</path>
+                    <url>http://192.168.28.192:8081/manager/text</url>
+                    <username>tomcat</username>
+                    <password>tomcat</password>
+                </configuration>
+            </plugin>
+
+        </plugins>
     </build>
 </project>
