--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>nvp-outcall</module>
         <module>nvp-waihu-ap</module>
         <module>nvp-gzdw</module>
+        <module>nvp-zhuanjie</module>
 
 
     </modules>
