--- a/nvp-outcall/pom.xml
+++ b/nvp-outcall/pom.xml
@@ -11,6 +11,17 @@
 
     <artifactId>nvp-outcall</artifactId>
     <packaging>war</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>org.freeswitch.esl.client</groupId>
+            <artifactId>org.freeswitch.esl.client</artifactId>
+            <version>0.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
