--- a/nvp-showvxml/pom.xml
+++ b/nvp-showvxml/pom.xml
@@ -8,15 +8,24 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>nvp-panjianincubator</artifactId>
+    <!--显示vxml文件-->
+    <artifactId>nvp-showvxml</artifactId>
     <packaging>war</packaging>
+
+    <properties>
+        <!-- 文件拷贝时的编码 -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <!-- 编译时的编码 -->
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+        <!--继承spring-boot时才有效-->
+        <java.version>1.8</java.version>
+    </properties>
+
     <dependencies>
-        <!-- spring-boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-freemarker</artifactId>
-            <!-- 自动加入spring-boot-starter-web依赖 -->
+            <artifactId>spring-boot-starter-web</artifactId>
             <exclusions>
                 <exclusion>
                     <groupId>org.springframework.boot</groupId>
@@ -27,14 +36,14 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
-            <scope>provided</scope>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <!--dom4j-->
@@ -47,24 +56,15 @@
             <groupId>jaxen</groupId>
             <artifactId>jaxen</artifactId>
         </dependency>
-
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
+
 
             <!-- 配置Tomcat插件 -->
             <plugin>
@@ -73,14 +73,14 @@
                 <version>2.2</version>
 
                 <configuration>
-                    <port>8082</port>
+                    <port>8081</port>
                     <path>/${project.name}</path>
-                    <url>http://192.168.28.193:8082/manager/text</url>
-                    <username>tomcat</username>
-                    <password>tomcat</password>
+                    <url></url>
+                    <username></username>
+                    <password></password>
                 </configuration>
             </plugin>
         </plugins>
-
     </build>
+
 </project>
